--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
+  device_preview: ^1.1.0
+  hydrated_bloc: ^9.1.5
+  flutter_bloc: ^8.1.6
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
