Use features-based architecture, set up Firebase, added sign-in and sign-up functionality, and enabled persistent user sessions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "Satoshi"
+        "Satoshi",
+        "usecases"
     ],
     "cmake.ignoreCMakeListsMissing": true
 }
