--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   hydrated_bloc: ^9.1.5
   flutter_bloc: ^8.1.6
   path_provider: ^2.1.3
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
+  get_it: ^7.7.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
