Add news widget.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cSpell.words": [
         "Satoshi",
-        "usecases"
+        "usecases",
+        "vsync"
     ],
     "cmake.ignoreCMakeListsMissing": true
 }
