Cache images and audio, fix some issues.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   dartz: ^0.10.1
   cloud_firestore: ^5.1.0
   just_audio: ^0.9.39
+  cached_network_image: ^3.3.1
+  just_audio_cache: ^0.1.2
 
 dev_dependencies:
   flutter_test:
